--- a/style.css
+++ b/style.css
@@ -51,3 +51,64 @@ nav a{
     font-size: 15px;
   }
 }
+
+/*------------- Acceuil Fondu -------------*/
+
+.acceuil{
+  height: 800px;
+  display: flex;
+  overflow: hidden;
+}
+
+.bloc-gauche-acceuil{
+  position: relative;
+  width: 40%;
+  height: 100%;
+  background: #000;
+  box-shadow: 90px 0 100px 100px #000;
+}
+
+h1{
+  color: #f1f1f1;
+  font-family: Montserrat, Helvetica, sans-serif;
+  font-size: 90px;
+  padding-top: 200px;
+  padding-bottom: 20px;
+  margin-left: 8vw;
+  white-space: nowrap; /* Tu reste droit même si y a plus d'espace*/
+   
+}
+
+.acceuil p{
+  color: #f1f1f1;
+  font-size: 30px;
+  text-align: justify;
+  width: 600px;
+  margin-left: 8vw;
+  white-space: nowrap;
+  line-height: 1.3;
+}
+
+.cont-btn-home{
+  display: flex;
+
+}
+
+.btn-acceuil{
+  font-size: 18px;
+  text-align: center;
+  color: #f1f1f1;
+  padding: 15px;
+  text-decoration: none;
+  border-radius: 5px;
+  margin-top: 40px;
+  border: 1px solid #f1f1f1;
+  width: 150px;
+  cursor: pointer;
+}
+
+.btn-acceuil:hover{
+  transition: all 0.2s ease-in-out;
+  color: #000;
+  background: #f1f1f1;
+}
