--- a/style.css
+++ b/style.css
@@ -198,5 +198,47 @@ h1{
 .section-info{
   display: flex;
   justify-content: center;
-  
+  flex-wrap:wrap ;
+  width: 100%;
+  margin: 0 auto;
+  background: #f1f1f1;
+  position: relative;
 }
+
+.carte-info{
+  width: 350px;
+  height: auto;
+  margin: 0 20px 80px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+  position: relative;
+  z-index: 100;
+}
+
+.container-photo-info img{
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+
+.carte-info h2{
+  color: #333;
+  text-align: center;
+  font-size: 25px;
+  padding: 20px 5px;
+}
+
+.carte-info p{
+  text-align: center;
+  color: #333;
+  font-size: 23px;
+  padding: 0 5px 15px;
+}
+
+.deco-info{
+  position: absolute;
+  z-index: -1;
+  top: -70px;
+  left: -100px;
+}
+
+/* Media Section Info */
